tests/ui/g-typelist-local-label-mismatch.stderr
error[E0271]: type mismatch resolving `<StepCons<LocalSend<Role<1>, Message<LabelMarker<7>, u16>>, StepNil> as StepConcat<StepNil>>::Output == StepCons<LocalSend<Role<1>, Message<LabelMarker<8>, u16>>, StepNil>`
  --> tests/ui/g-typelist-local-label-mismatch.rs:13:5
   |
13 | > = project(&PROGRAM);
   |     ^^^^^^^^^^^^^^^^^ expected `8`, found `7`
   |
   = note: expected struct `StepCons<LocalSend<Role<1>, hibana::global::Message<hibana::global::LabelMarker<8>, u16>>, StepNil>`
              found struct `StepCons<LocalSend<Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u16>>, StepNil>`
